--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,17 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
-
+      
     - name: Archive files
       uses: actions/upload-artifact@v4
       with:
         name: simple_speedometer
         path: |
           x64/simple_speedometer.dll
+          
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/v')
+      with:
+        body_path: changelog/${{ github.ref_name }}-CHANGELOG.txt
+        files: x64/simple_speedometer.dll
