--- a/src/simple_speedometer.vcxproj
+++ b/src/simple_speedometer.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="Shared.h" />
+    <ClInclude Include="version.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Coordinates.cpp" />
